@@ -3,6 +3,11 @@
 
 - fix issue336: the mirror_whitelist setting got lost on import.
 
+- allow export if a package with dotted name was uploaded while
+  devpi-common 2.0.9 was installed. The resulting export will only be
+  importable with devpi-server 4.x. It will fail to import in 3.x with a
+  MissingRegistration error.
+
 
 3.1.1 (2016-05-11)
 ------------------
